config openapi-doc for swagger