@@ -4,6 +4,7 @@ import com.chinhbean.shopapp.filters.JwtTokenFilter;
 import com.chinhbean.shopapp.models.Role;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.actuate.autoconfigure.security.reactive.EndpointRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -64,17 +65,9 @@ public class WebSecurityConfig {
 
                             .requestMatchers(GET,
                                     String.format("%s/roles**", apiPrefix)).permitAll()
+
                             .requestMatchers(GET,
-                                    String.format("%s/categories**", apiPrefix)).permitAll()
-
-                            .requestMatchers(POST,
                                     String.format("%s/categories/**", apiPrefix)).permitAll()
-
-                            .requestMatchers(PUT,
-                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
-
-                            .requestMatchers(DELETE,
-                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
 
                             .requestMatchers(GET,
                                     String.format("%s/products/**", apiPrefix)).permitAll()
@@ -82,59 +75,30 @@ public class WebSecurityConfig {
                             .requestMatchers(GET,
                                     String.format("%s/products/images/*", apiPrefix)).permitAll()
 
-                            .requestMatchers(POST,
-                                    String.format("%s/products**", apiPrefix)).hasAnyRole(Role.ADMIN)
-
-                            .requestMatchers(PUT,
-                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
-
-                            .requestMatchers(DELETE,
-                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
-
-
-                            .requestMatchers(POST,
-                                    String.format("%s/orders/**", apiPrefix)).hasAnyRole(Role.USER)
-
                             .requestMatchers(GET,
                                     String.format("%s/orders/**", apiPrefix)).permitAll()
 
-                            .requestMatchers(PUT,
-                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
-
-                            .requestMatchers(DELETE,
-                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
-
-                            .requestMatchers(POST,
-                                    String.format("%s/order_details/**", apiPrefix)).hasAnyRole(Role.USER)
-
                             .requestMatchers(GET,
                                     String.format("%s/order_details/**", apiPrefix)).permitAll()
-
-                            .requestMatchers(PUT,
-                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
-
-                            .requestMatchers(DELETE,
-                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
-
 
                             .anyRequest().authenticated();
 
                 })
 
                     .csrf(AbstractHttpConfigurer::disable);
-                http.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
-                    @Override
-                    public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
-                        CorsConfiguration configuration = new CorsConfiguration();
-                        configuration.setAllowedOrigins(List.of("*"));
-                        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-                        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-                        configuration.setExposedHeaders(List.of("x-auth-token"));
-                        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-                        source.registerCorsConfiguration("/**", configuration);
-                        httpSecurityCorsConfigurer.configurationSource(source);
-                    }
-                })
+        http.securityMatcher(String.valueOf(EndpointRequest.toAnyEndpoint()));
+//        @Override
+//                    public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
+//                        CorsConfiguration configuration = new CorsConfiguration();
+//                        configuration.setAllowedOrigins(List.of("*"));
+//                        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+//                        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+//                        configuration.setExposedHeaders(List.of("x-auth-token"));
+//                        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//                        source.registerCorsConfiguration("/**", configuration);
+//                        httpSecurityCorsConfigurer.configurationSource(source);
+//                    }
+//                })
 
         ;
         return http.build();
